2006-02-09  Peter Dennis Bartok  <pbartok@novell.com>

	* ChangeLog: Created, contents from deleted 'changelog' file
	* FontCollection.cs: Cleaned up marshalling and made 64bit safe

2005-12-13 Konstantin Triger <kostat@mainsoft.com>

	* TextLineIterator.jvm.cs: handle null string.

2005-11-16 Konstantin Triger <kostat@mainsoft.com>

        * PrivateFontCollection.jvm.cs: open a correct stream.

2005-11-13 Konstantin Triger <kostat@mainsoft.com>

	* Added LineLayout.jvm.cs, TextLineIterator.jvm.cs for text support

2005-11-10 Vladimir Krasnov <vladimirk@mainsoft.com>

	* FontCollection.jvm.cs: refactoring, added GetInitialFont()
	* InstalledFontCollection.jvm.cs: refactoring, removed GetFamilyName
	* PrivateFontCollection.jvm.cs: refactoring

2005-08-03  Andrew Skiba <andrews@mainsoft.com>

	* FontCollection.jvm.cs, InstalledFontCollection.jvm.cs,
	PrivateFontCollection.jvm.cs: added TARGET_JVM implementation

2005-04-04  Jordi Mas i Hernandez <jordi@ximian.com>

	* PrivateFontCollection.cs: nativeFontCollection equals IntPtr.Zero to
	avoid errors on multiple disposes
	
	* FontCollection.cs: implements dispose

2004-11-25  Marek Safar  <marek.safar@seznam.cz>

	* Image.cs: Add CheckStatus to Families.

2004-02-25  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* PrivateFontCollection.cs: Removed excess attributes

2004-02-25  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* FontCollection.cs: Remove console

2004-02-06  Sanjay Gupta <gsanjay@novell.com>
	* CheckStatus(): Used method of GDIPlus for error checking
	  in FontCollection.cs, InstalledFontCollection.cs and
	  PrivateFontCollection.cs

2004-01-29  Sanjay Gupta <gsanjay@novell.com>
	* FontCollection.cs: Implemented Dispose method.
	* InstalledFontCollection.cs: Removed Console.WriteLine calls.
	* PrivateFontCollection.cs: Implemented AddMemoryFont method.

2004-01-28  Jordi Mas <jordi@ximian.com>
	* FontCollection.cs: fixed marshalling issues

2004-01-28  Sanjay Gupta <gsanjay@novell.com>
